--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# This file includes the default Laravel .env keys for future use.
+# Not all are currently used in this project.
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
